# toolguard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_gen.py  setup.py  ~azure_wrapper.py  ~validator_f_generator.py
.github/workflows/: python-publish.yml
archive/: py_to_oas.py
archive/data_gen/: create_domain_moc.py  create_oas.py  create_orca_oas.py  oas_summary.py  remove_numbers.py  rules2policydoc.py
archive/dmn/: dmn.py  gen_rules.py  main.py  prompt.py
archive/odm/: gen_rules.py  prompt.py
docs/: ToolGuard.code-workspace.drawio
eval/: gen_policy_from_refs.py  ref_eval.py
eval/airline/: test_rt.py
eval/telecom/step1_long/: disable_roaming.json  enable_roaming.json  get_bills_for_customer.json  get_customer_by_id.json  get_customer_by_name.json  get_customer_by_phone.json  get_data_usage.json  get_details_by_id.json  refuel_data.json  resume_line.json  (+3 more)
examples/calculator/: end2end.py
llm/: azure_wrapper.py
src/data_gen/: create_oas.py  create_orca_oas.py  orca_preset.py  prompt  records  rules2policydoc.py
src/dmn/: prompt.py
src/eval/: gen_gt_policy_from_refs  gen_policy_from_refs.py
src/odm/: gen_rules.py
src/policy_adherence/: __main__.py  _runtime_common.py  code.py  data_types.py  gen_domain.py  gen_tool_policy_check.py  gen_tool_policy_tests.py  gen_tool_validator.py  oas.py  oas_to_stub.py  policy_check_generator.py  prompts.py  prompts_gen_ai.py  types.py  unittests.py  utils.py  ~gen_domain_llm.py
src/policy_check_generation/: gen_tool_validator.py
src/toolguard/: __init__.py  __main__.py  _runtime_common.py  api_extractor.py  buildtime.py  cli.py  core.py  data_types.py  gen_domain.py  gen_tool_policy_check.py  llm_utils.py  logging_utils.py  prompts.py  py_to_oas.py  runtime.py  tool_guard_generator.py  ~_runtime_common.py  ~extract_api.py
src/ui/: coverage.py  coverage_new.py  my_server.py  review.py  review2.py
stages_tptd/: policy_text_process.py
stages_tptd/prompts/: coverage_fixer  coverage_reviewer  create_examples  create_policy  standalone_fixer  standalone_reviewer
stages_tptd_1/: policy_text_process.py
stages_tptd_1/prompts/: coverage_fixer  coverage_reviewer  create_examples  create_policy  examples_fixer  examples_reviewer  standalone_fixer  standalone_reviewer
tests/: full_test_calc.py  gen_dmn_rules.py  gen_odm_rules.py  op_only_oas.py  run_gen.py  run_tau2.py  run_tau2_airline.py  run_tau2_telecom.py  run_temp.py  run_workday.py  tau_wrapper.py  test_calculator.py  test_class_tools.py  test_dependencies.py
tests/calculator/: policy_doc.md  test_calculator.py  tools.py
tests/policy_adherence/: test_prompts.py
(+744 files in other folders)
