[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "toolguard"
dynamic = ["version"]
description = "Policy adherence code generation for guarding AI agent tools"
readme = "README.md"

authors = [
    { name = "Naama Zwerdling", email = "naamaz@il.ibm.com" },
    { name = "David Boaz", email = "davidbo@il.ibm.com" },
]

requires-python = ">=3.11"

dependencies = [
    "dotenv",
    "pydantic",
    "litellm",
    "pytest",
    "pytest-json-report",
    "pyright",
    "datamodel-code-generator",
    "markdown",
    "docstring-parser",
    "pytest-asyncio",
    "mellea",
    "smolagents",
    "langchain-core",
]

license = { text = "Apache-2.0" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/toolguard"]

[tool.hatch.build.targets.wheel.sources]
"src/toolguard/gen_spec/prompts" = "toolguard/gen_spec/prompts"
"src/toolguard/gen_py/templates" = "toolguard/gen_py/templates"

[tool.hatch.build]
include = [
    "src/toolguard",
    "README.md",
    "LICENSE",
]
